[project]
name = "fsm-llm-web-summary-demo"
version = "0.1.0"
description = "Demo-only FSM + LLM pipeline for scraping and summarizing webpages using DuckDB and async workers."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Your Name" }
]

dependencies = [
  "duckdb>=1.0.0",
  "httpx>=0.27",
  "readability-lxml>=0.8.1",
  "trafilatura>=1.6.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "anthropic>=1.0.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev =
