[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsm-llm-web-summary-demo"
version = "0.1.0"
description = "FSM-driven DuckDB web scraping + summarization demo"
authors = [
  { name = "Xiao-Fei Zhang" }
]
readme = "README_web_demo.md"
requires-python = ">=3.10"

# Put your dependencies here
dependencies = [
  "requests",
  "httpx",
  "beautifulsoup4",
  "duckdb",
  "pydantic>=2",
  "tenacity",
  # "openai", "anthropic", etc if you want them installed via this project
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
